plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'  // ✨ REST Docs용 추가
}

group = 'com.gitfactory'
version = '0.0.1-SNAPSHOT'
description = 'Blog REST API with Spring Boot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    asciidoctorExt  // ✨ REST Docs용 추가
}

repositories {
    mavenCentral()
}

// ✨ REST Docs snippets 디렉토리 설정
ext {
    snippetsDir = file('build/generated-snippets')
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'

    // ✨ Swagger/OpenAPI dependencies
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // Test dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation 'org.hamcrest:hamcrest:2.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Spring REST Docs dependencies
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
}

// ✨ Test 태스크 설정 (snippets 출력)
tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
}

// ✨ AsciiDoctor 태스크 설정
asciidoctor {
    inputs.dir snippetsDir
    configurations 'asciidoctorExt'
    dependsOn test

    // 소스 및 출력 디렉토리 설정
    sourceDir = file('src/docs/asciidoc')
    outputDir = file('build/docs/asciidoc')
}

// ✨ bootJar 태스크 설정 (문서를 JAR에 포함)
bootJar {
    dependsOn asciidoctor
    from ("${asciidoctor.outputDir}") {
        into 'static/docs'
    }
}

// ✨ snippets 디렉토리 생성 태스크
tasks.register('createSnippetsDir') {
    doLast {
        snippetsDir.mkdirs()
    }
}

test.dependsOn createSnippetsDir